tests/errors/mod_by_zero.py
# expect_error: ZeroDivisionError
print(5 % 0)
